<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSARApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gpsarapp">GPSARApp</string>
    <string name="game_mode">Gamemode</string>
    <string name="two_dimension">GoogleMaps</string>
    <string name="object">オブジェクト検出</string>
    <string name="navi">ここをナビ</string>
    <string name="how_long_distance">ここの距離</string>
    <string name="google_maps_key"></string>
    <string name="dummy">dummy!</string>
    <string name="yasuda_kodo">安田講堂（やすだこうどう）は、東京大学本郷キャンパスにある講堂である。\n
                                   正式には東京大学大講堂（とうきょうだいがくだいこうどう）というが、\n
                                   東大の学内では安田講堂が用いられることに決まっている。\n
                                   収容人数は、1,144席（3階席・728席 / 4階席・416席）。\n</string>
    <string name="tokyo_dome">東京ドーム（とうきょうドーム）は、東京都文京区に所在するドーム型野球場。\n
                                  1988年（昭和63年）3月18日に開場した日本初の屋根付き球場であり、\n
                                  株式会社東京ドームが運営する東京ドームシティの中核施設である。\n
                                  愛称は「BIG EGG（ビッグエッグ）」。\n
                                  プロ野球セントラル・リーグ・読売ジャイアンツ（巨人）が\n
                                  専用球場（本拠地球場）としている。\n</string>
    <string name="sky_tree">東京スカイツリーは東京都墨田区押上一丁目にある電波塔（送信所）である。\n
                                観光・商業施設やオフィスビルが併設されており、\n
                                ツリーを含め周辺施設は「東京スカイツリータウン」と呼ばれる。\n
                                2012年5月に電波塔・観光施設として開業した。\n
                                東京スカイツリーについての名称・ロゴマーク・シルエットデザイン・完成予想CGといった\n
                                知的財産は東武タワースカイツリー株式会社等の著作権及び商標権により保護されている。\n</string>
    <string name="meiji_jingu">明治神宮（めいじじんぐう）とは、東京都渋谷区にある神社。\n
                                   明治天皇と昭憲皇太后を祭神とする。\n
                                   初詣では例年日本一の参拝者数を集める。\n
                                   正式な表記は「宮」の「呂」の中間の線が入らない。\n</string>
    <string name="kokkai_gijido">国会議事堂（こっかいぎじどう）は、国会が開催される建物。\n
                                    現在の建物は1936年（昭和11年）に帝国議会議事堂として建設された。\n
                                    東京都千代田区永田町一丁目にある。\n
                                    建物は左右対称形を成しており、正面に向かって左側に衆議院、右側に参議院が配置されている\n</string>
    <string name="yanaka_ginza">谷中の住民の台所・谷中銀座商店街である。\n
                                    様々な、お店が存在しており、毎日多くの人でにぎわっている。\n</string>
    <string name="tokyo_tower">東京タワー（とうきょうタワー、英: Tokyo Tower）は、\n
                                   東京都港区芝公園にある集約電波塔である。\n
                                   1958年10月14日竣工、同年12月23日に完工式が開かれた。\n
                                   東京のシンボル・観光名所として知られる。\n
                                   正式名称は日本電波塔（にっぽんでんぱとう）。\n</string>
    <string name="tokyo_denki_university">東京電機大学（とうきょうでんきだいがく、英語: Tokyo Denki University）は、\n
                                                 東京都足立区千住旭町5に本部を置く日本の私立大学である。1949年に設置された。\n
                                                 大学の略称は電大、電機大、TDU。\n</string>
    <string name="rainbow_bridge">レインボーブリッジ（Rainbow Bridge）は、東京都の港区芝浦地区と台場地区（港区台場および江東区有明）を結ぶ吊り橋。\n
                                        1987年（昭和62年）着工、1993年（平成5年）竣工、同年8月26日開通。\n
                                        「レインボーブリッジ」の名前は一般公募により決められたもので、正式名称は「東京港連絡橋」である。\n</string>
    <string name="kitasenju_station">北千住駅（きたせんじゅえき）は、東京都足立区千住旭町および千住二丁目にある、\n
                                           東日本旅客鉄道（JR東日本）・東京地下鉄（東京メトロ）・東武鉄道・首都圏新都市鉄道の駅である。\n</string>
    <string name="adachi_library">足立区立中央図書館（あだちくりつ ちゅうおうとしょかん）は、東京都足立区千住五丁目にある公共図書館。\n
                                       都営集合住宅の入る高層ビルの1〜3階を占める。</string>
    <string name="sensoji">浅草寺（せんそうじ）とは、東京都台東区浅草二丁目にある東京都内最古の寺である。山号は金龍山。\n
                              本尊は聖観音菩薩（しょうかんのんぼさつ）。元は天台宗に属していたが第二次世界大戦後独立し、\n
                              聖観音宗の総本山となった。観音菩薩を本尊とすることから「浅草観音」あるいは「浅草の観音様」と\n
                              通称され、広く親しまれている。東京都内では、唯一の坂東三十三箇所観音霊場の札所（13番）である。\n
                              江戸三十三箇所観音霊場の札所（1番）でもある。</string>
    <string name="asahi">アサヒビール株式会社（英: Asahi Breweries, Ltd.）は、日本の大手ビールメーカー。</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_activity">Map</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_search_register">SearchRegisterActivity</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="title_activity_street_view">StreetViewActivity</string>

</resources>
