<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.47"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button_navi"
        android:layout_toStartOf="@+id/button_navi" />

    <TextView
        android:layout_width="464dp"
        android:layout_height="513dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dummy"
        android:id="@+id/textView"
        android:layout_weight="0.47"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/button_navi"
        android:layout_toEndOf="@+id/button_navi" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navi"
        android:id="@+id/button_navi"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_long_distance"
        android:id="@+id/button_distance"
        android:layout_above="@+id/button_navi"
        android:layout_centerHorizontal="true" />
</RelativeLayout>